--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
 ---
-layout: default
+layout: home
 ---
-
-<h1>Latest Posts</h1>
-
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      <p>{{ post.excerpt }}</p>
-    </li>
-  {% endfor %}
-</ul>
