--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 layout: home
 ---
 
-<p>Blog post tags...</p>
 <ul class="inline">
+  <li><a class="hashtag" href="/tags/#javascript" title="Blog posts about 'javascript'">javascript</a></li>
   <li><a class="hashtag" href="/tags/#git" title="Blog posts about 'git'">git</a></li>
   <li><a class="hashtag" href="/tags/#vim" title="Blog posts about 'vim'">vim</a></li>
-  <li><a class="hashtag" href="/tags/#javascript" title="Blog posts about 'javascript'">javascript</a></li>
-  <li><a class="hashtag" href="/tags/#orthography" title="Blog posts about 'orthography'">orthography</a></li>
-  <li><a class="hashtag" href="/tags/#toki-pona" title="Blog posts about 'toki-pona'">toki-pona</a></li>
+  <li><a class="hashtag" href="/toki-pona" title="actually a whole landing page about Toki Pona">toki-pona</a></li>
   <li><a class="hashtag" href="/tags/#lojban" title="Blog posts about 'lojban'">lojban</a></li>
+  <li><a class="hashtag" href="/tags/#orthography" title="Blog posts about 'orthography'">orthography</a></li>
 </ul>
 
 <p>Find me on Mastodon...</p>
